# cbl-dart

./: .gitignore  .gitmodules  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.md  all_lint_rules.yaml  analysis_options.yaml  codecov.yml  conductor.json  context7.json  download_libs.sh  index.html  lefthook.yml  melos.yaml  nx.json  opensearch.xml  package-lock.json  package.json  pubspec.yaml  sitemap.xml  workspace.json
.codex/: config.toml
.codex/environments/: environment.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yaml
.github/: FUNDING.yml  dependabot.yml  runs-on.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yaml  benchmark_main.yaml  benchmark_pr.yaml  benchmark_pr_closed.yaml  cbl_native-binaries-release.yaml  ci.yaml  docs.yaml  libcblitedart-release.yaml  publish.yaml  tests-cbl-pkg.yml
CBL_Dart.xcodeproj/: project.pbxproj
Xcode/: Info.plist
Xcode/xcconfigs/: CBL_Dart.xcconfig
assets/css/: styles.0720e9c6.css  styles.2a8f0614.css  styles.53926b19.css  styles.827073f5.css  styles.88fe6be1.css  styles.8c5164c8.css  styles.d6a7e81c.css  styles.ee5f764e.css  styles.f17a584b.css
assets/js/: 0020b39c.005d0737.js  0020b39c.330a3f3b.js  0020b39c.a72015c8.js  046e2194.081fa18c.js  046e2194.0a6473be.js  046e2194.10a9fd96.js  046e2194.1ecb7add.js  046e2194.72977a0c.js  046e2194.96485df4.js  046e2194.b57a3b5f.js  046e2194.be8f1c9f.js  046e2194.ebd30778.js  05d0f21b.058d0c26.js  05d0f21b.217e9804.js  05d0f21b.829c5ada.js  05d0f21b.ae667443.js  05d0f21b.d68ad040.js  05d0f21b.d9ab5911.js  07ccc64a.4427cbb2.js  07ccc64a.8202a968.js  07ccc64a.b43668dc.js  07ccc64a.c391e5a9.js  07ccc64a.d7ec6b84.js  09dfaa1e.465f8716.js  09dfaa1e.4acb6521.js  09dfaa1e.4f89b696.js  09dfaa1e.5a47e3dd.js  09dfaa1e.929019a2.js  09dfaa1e.a0cb75da.js  09dfaa1e.a4776c0a.js  09dfaa1e.f4197c1a.js  0e1d4cf9.0ca7d100.js  0e1d4cf9.1fa9680f.js  0e1d4cf9.3582225c.js  0e1d4cf9.6f81589f.js  0e1d4cf9.79146c24.js  0e1d4cf9.82268643.js  0e1d4cf9.86d128a7.js  0e1d4cf9.f373f27e.js  0e1d4cf9.fccf94d8.js  (+295 more)
blobs/: index.html
cbl-dart/: CMakeLists.txt
cbl-dart/src/: CBL+Dart.h  CBLDart.cpp  CBLDart.h  Callbacks.cpp  Callbacks.h  Fleece+Dart.h  FleeceDart.cpp  FleeceDart.h  cbldart_export.h
data-sync/replication/: index.html
databases/: index.html
docs/: .prettierignore  .prettierrc  CONTRIBUTOR_GUIDE.md  README.md  analysis_options.yaml  babel.config.js  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.ts  tsconfig.json
docs/docs/: blobs.mdx  databases.mdx  debug-symbols.mdx  documents.mdx  full-text-search.mdx  general-concepts.mdx  getting-started.md  indexing.mdx  install.md  install.mdx  instrumentation.md  instrumentation.mdx  key-concepts.md  key-concepts.mdx  live-queries.mdx  livequeries.mdx  migration-v3-to-v4.mdx  native-libraries.mdx  overview.md  overview.mdx  prebuilt-database.mdx  query-resultsets.mdx  query-troubleshooting.mdx  querybuilder.mdx  scopes-and-collections.mdx  sqlplusplus-mobile.mdx  sqlplusplus-querybuilder-diff.mdx  sqlplusplus-querybuilder-differences.mdx  sqlplusplus-server-differences.mdx  supported-platforms.md  supported-platforms.mdx  typed-data.md  typed-data.mdx  usage-examples.md  usage-examples.mdx  vector-search.mdx
documents/: index.html
full-text-search/: index.html
general-concepts/: index.html
indexing/: index.html
install/: index.html
instrumentation/: index.html
key-concepts/: index.html
migration-v3-to-v4/: index.html
native/: .gitignore  CMakeLists.txt  CouchbaseLiteC.release
native/CBL_Dart.xcodeproj/: project.pbxproj
native/CBL_Dart.xcodeproj/xcshareddata/xcschemes/: CBL_Dart_All.xcscheme
native/Xcode/xcconfigs/: CBL_Dart.xcconfig  CBL_Dart_Debug.xcconfig  Project.xcconfig  Project_Debug.xcconfig
native/cbl-dart/: CMakeLists.txt
native/cbl-dart/src/: AsyncCallback.cpp  AsyncCallback.h  CBL+Dart.cpp  CBL+Dart.h  Callbacks.cpp  Callbacks.h  Fleece+Dart.cpp  Fleece+Dart.h  Utils.cpp  Utils.hh  cbldart_export.h
native/couchbase-lite-dart/: CMakeLists.txt  debug-session.txt
native/couchbase-lite-dart/CBL_Dart.xcodeproj/: project.pbxproj
native/couchbase-lite-dart/CBL_Dart.xcodeproj/xcshareddata/xcschemes/: CBL_Dart.xcscheme
native/couchbase-lite-dart/Xcode/: .gitignore  Info.plist
native/couchbase-lite-dart/Xcode/xcconfigs/: CBL_Dart.xcconfig  CBL_Dart_Debug.xcconfig  CBL_Dart_Release.xcconfig  Project.xcconfig  Project_Release.xcconfig
native/couchbase-lite-dart/include/: CBL+Dart.h  CBLDart_Export.h  Fleece+Dart.h  p2p_issue.h
native/couchbase-lite-dart/src/: AsyncCallback.cpp  AsyncCallback.h  CBL+Dart.cpp  CpuSupport.cpp  CpuSupport.h  Fleece+Dart.cpp  Sentry.cpp  Utils.cpp  Utils.h  main.cpp  p2p_issue.mm
native/couchbase-lite-dart/src/exports/: CBL_Dart_Exports.txt  format_apple.awk  format_linux.awk  format_windows.awk  generate_exports.sh
native/couchbase-lite-dart/tools/: build_android.sh  build_ios.sh  build_release.sh  build_unix.sh  build_windows.sh
native/tools/: android-sdk.sh  build_android.sh  build_apple.sh  build_linux.sh  build_unix.sh  download_prebuilt_binaries.sh
prebuilt-database/: index.html
queries/live-queries/: index.html
queries/query-builder/: index.html
queries/query-result-sets/: index.html
queries/query-troubleshooting/: index.html
scopes-and-collections/: index.html
search/: index.html
supported-platforms/: index.html
tool/: apple-simulator.sh  ci-steps.sh  create-crash-report-linux.sh  dev-tools.sh  pubspec.yaml
tools/: android-emulator.sh  android-sdk.sh  android_crashlytics_stack.dart  apple-simulator.sh  build_android.sh  build_apple.sh  build_linux.sh  build_xcframeworks.sh  ccache-clang  ci-steps.sh  coverage.sh  create-crash-report-linux.sh  create-private-keys.sh  dart-profiling-macos.md  dev-tools.sh  flutter-test-wrapper.sh  packages.sh  release.sh  worktree-setup.sh  worktree-teardown.sh
typed-data/: index.html
usage-examples/: index.html
vector-search/: index.html
(+70 files in other folders)
