cmake_minimum_required (VERSION 3.1)
cmake_policy(VERSION 3.1)

project(Root)

# Standalone Dart is using libc++ and Flutter probably too.
if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
endif()

add_subdirectory(vendor/couchbase-lite-C)

add_subdirectory(cbl-dart)
